--- a/src/pages/SignUpChoice.css
+++ b/src/pages/SignUpChoice.css
@@ -4,23 +4,23 @@
 }
 
 .title {
-  font-size: 1.5rem;
+  font-size: 30px;
   font-weight: bold;
-  margin-bottom: 50px;
+  margin-bottom: 90px;
 }
 
 .card-container {
   display: flex;
   justify-content: center;
-  gap: 40px;
+  gap: 80px;
   flex-wrap: wrap;
 }
 
 .card {
-  width: 240px;
-  height: 280px;
-  border: 2px solid #ccc;
-  border-radius: 12px;
+  width: 340px;
+  height: 440px;
+  border: 2px solid #c4c4c4;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,22 +30,22 @@
 }
 
 .card-icon {
-  font-size: 3rem;
+  font-size: 100px;
   color: #ccc;
   margin-bottom: 20px;
   transition: color 0.3s ease;
 }
 
 .card-title {
-  font-size: 1.2rem;
+  font-size: 25px;
   font-weight: bold;
   color: #777;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
   transition: color 0.3s ease;
 }
 
 .card-desc {
-  font-size: 0.9rem;
+  font-size: 18px;
   color: #aaa;
   transition: color 0.3s ease;
 }
@@ -65,4 +65,8 @@
 
 .card:hover .card-desc {
   color: #f4a13c;
+}
+.card-link {
+  text-decoration: none; /* 텍스트 밑줄 제거 */
+  color: inherit; /* 부모 요소의 글자 색상을 상속받음 */
 }
