--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@ a {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: #ffffff;
 }
 .content-wrap {
   flex: 1;
