--- a/src/pages/MyPage_My_Journey_Management.css
+++ b/src/pages/MyPage_My_Journey_Management.css
@@ -1,7 +1,3 @@
-/*
- * 이 CSS 파일은 MyPage_My_Journey_Management.jsx에 특화된 스타일을 포함합니다.
- */
-
 .my-page-main-content {
   flex-grow: 1;
 }
@@ -302,6 +298,7 @@
   border-radius: 5px;
   cursor: pointer;
   width: 200px;
+  text-align: center; /* 이 부분을 추가합니다. */
 }
 
 /* 펼치기 버튼 */
