--- a/src/pages/SignUp_General.css
+++ b/src/pages/SignUp_General.css
@@ -41,8 +41,8 @@ select {
   background-color: #ffa552;
   color: white;
   border: none;
-  padding: 20%;
-  border-radius: 30px;
+  padding: 10px;
+  border-radius: 10px;
   padding: 12px 0;
   font-size: 14px;
   cursor: pointer;
