--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -72,6 +72,10 @@
   box-shadow: var(--shadow-lg);
   transform: translateY(-2px);
 }
+.recommend-card-link {
+  text-decoration: none;
+  color: inherit;
+}
 .recommend-card img {
   width: 100%;
   height: 160px;
@@ -204,7 +208,7 @@
 }
 
 .slick-slide > div {
-  padding: 20px;
+  padding: 10px;
 }
 
 .slick-dots li button:before {
