--- a/src/pages/MyPage_My_Journey_Management.css
+++ b/src/pages/MyPage_My_Journey_Management.css
@@ -32,7 +32,6 @@
   font-weight: bold;
   color: #333;
   margin-bottom: 20px;
-  border-bottom: 2px solid #ffa552;
   padding-bottom: 10px;
 }
 
@@ -212,7 +211,7 @@
   flex-direction: column;
 }
 
-.journey-card-header {
+.journey-card-headersv1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -220,7 +219,7 @@
   padding-bottom: 0px;
 }
 
-.journey-date {
+.journey-datesv1 {
   font-size: 14px;
   color: #666;
   font-weight: bold;
