--- a/src/pages/SignUp_General.css
+++ b/src/pages/SignUp_General.css
@@ -63,7 +63,7 @@ select {
 }
 
 .submit-btn {
-  background-color: #c9c9c9;
+  background-color: #ffa552;
   color: white;
   padding: 12px 0;
   border: none;
